fix: gradient on safari

--- a/src/app/common/kng-news/kng-news.component.scss
+++ b/src/app/common/kng-news/kng-news.component.scss
@@ -1,7 +1,7 @@
 
 .kng-drawer{
   color:var(--mdc-theme-primary-text);
-  background: linear-gradient(transparent,white 50%);
+  background: linear-gradient(transparent 20%,white 50%);
 
   position: fixed;
   top: calc( 100vh * -1.85 );
